# weather_data

./: .containerignore  .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  DASHBOARD_README.md  DEPLOYMENT.md  INDEX.md  PROJECT_PLAN.md  README.md  bonus_tasks.md  main_tasks.md  milestone2_test.py  podman-compose.prod.yml  podman-compose.yml  pyproject.toml  starter_code.py  test_dashboard.py  test_weatherapi.py
.github/chatmodes/: cleanup.chatmode.md  implement.chatmode.md  plan.chatmode.md
.github/instructions/: M01_setup_quality.instructions.md  M02_api_reliability.instructions.md  M03_7timer_vertical_slice.instructions.md  M04_models_settings.instructions.md  M05_multi_api.instructions.md  M06_data_quality_lineage.instructions.instructions.md  M07_processing_enhancements.instructions.md  M08_caching_redis.instructions.md  M09_streaming.instructions.md  M10_dashboard_visualizations.instructions.md  M11_testing_strategy.instructions.md  M12_logging_monitoring.instructions.md  M13_container_ci.instructions.md  M14_docs_performance.instructions.md  milestone_01_foundation.instructions.md  milestone_02_api_client.instructions.md  milestone_03_data_processing.instructions.md  milestone_04_dashboard.instructions.md  milestone_05_testing.instructions.md  milestone_06_deployment.instructions.md  milestone_07_documentation.instructions.md
.github/workflows/: ci-cd.yml  ci.yml  test.yml
docker/grafana/datasources/: datasources.yml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: M01_quality_baseline.md  README.md  integration-validation.md
docs/api/: README.md
docs/architecture/: README.md
docs/decisions/: adr-001-deps-python.md  adr-002-quality-tooling.md  adr-003-logging-settings.md
docs/performance/: README.md  benchmark_results.json
docs/user-guides/: README.md
examples/: milestone1_demo.py  milestone3_demo.py
reports/: test-results.xml
scripts/: run_tests.sh
scripts/deployment/: deploy-dev.sh  deploy-prod.sh  setup-secrets.sh
src/: __init__.py
src/weather_data/: __init__.py
src/weather_data/http/: circuit_breaker.py  interfaces.py  reliability.py  reliable_client.py  types.py
src/weather_data/providers/: base.py  mock.py
src/weather_pipeline/: __init__.py  cli.py
src/weather_pipeline/api/: __init__.py  base.py  factory.py  openweather.py  seven_timer.py  weatherapi.py
src/weather_pipeline/config/: __init__.py  settings.py
src/weather_pipeline/core/: __init__.py  circuit_breaker.py  container.py  health.py  logging.py  resilience.py
src/weather_pipeline/dashboard/: __init__.py  app.py  auth.py  components.py  data_manager.py  exports.py  realtime.py
src/weather_pipeline/models/: __init__.py  api_responses.py  weather.py
src/weather_pipeline/processing/: __init__.py  cache_manager.py  data_quality.py  feature_engineering.py  geospatial.py  performance.py  streaming.py  time_series.py
tests/: __init__.py  conftest.py  test_foundation.py  test_m02_reliability.py  test_milestone3_processing.py  utils.py
tests/contract/: test_api_contracts.py
tests/e2e/: test_dashboard_workflow.py  test_end_to_end.py
tests/integration/: test_api_clients.py  test_api_simple.py  test_milestone2_features.py  test_weatherapi_provider.py
tests/performance/: test_benchmarks.py  test_milestone3_processing.py
tests/property/: test_property_based.py
tests/unit/: test_api_base.py  test_config.py  test_foundation.py  test_models.py  test_models_simple.py
