[project]
name = "weather-data"
version = "0.0.0"
description = "Advanced Weather Data Engineering Challenge – scaffolding"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Project Team" }
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.7",
  "pre-commit>=3.7.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = [".venv", "venv", "build", "dist", "starter_code.py"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]
ignore = [
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true
extend-exclude = "(starter_code\\.py|\\.venv|venv|build|dist)"

[tool.isort]
profile = "black"
line_length = 100
py_version = 311
skip = ["starter_code.py", ".venv", "venv", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
